macros/tests/compile-fail/tuple_struct.rs
use gluesql::FromGlueRow;

#[derive(FromGlueRow)]
struct T(i32);

